--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header class="header">
             <nav class="navigation-bar">
                 <div class="logo-part">
-                    <img id="logo" src="./assets/logo.jpg" width="30" height="30">
+                    <img id="logo" src="./assets/logo1.jpg" width="30" height="30">
                     <h3>Nelson Ogbaji</h3>
                 </div>
 
