--- a/index.html
+++ b/index.html
@@ -95,16 +95,18 @@
             </section>
             <footer id="footer" style="background-color: rgb(58, 64, 66);">
                 <div class="footer-content">
-                    <h4>Nelson Digital</h4>
-                    <p>Nelson Digital is a simple personal portfolio website, all rigt reserve</p>
+                    <h4>Nelson Ogbaji</h4>
+                    <p>Nelson Ogbaji blog is a simple personal portfolio website, all right reserve</p>
+                    <ul class="social-handle">
+                        <li><a href="#">LinkedIn</a></li>
+                        <li><a href="#">Gmail</a></li>
+                        <li><a href="#">Twitter</a></li>
+                        <li><a href="#">Facebook</a></li>
+                        <li><a href="#">whatsapp</li>
+                    </ul>
+                    <br><p>Copyright © 2023</p>
                 </div>
-                <ul class="social-handle">
-                    <li><a href="#">LinkedIn</a></li>
-                    <li><a href="#">Gmail</a></li>
-                    <li><a href="#">Twitter</a></li>
-                    <li><a href="#">Facebook</a></li>
-
-                </ul>
+                
             </footer>
         
 
